--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ body{
   height: 100%;
 }
 
+.page{
+  width: 59.19rem;
+}
+
 
 
 
