--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -14,10 +14,6 @@
   }
 }
 
-.page{
-  width: 59.19rem;
-}
-
 .projects-presentation p{
   font-size: 25px;
   padding-bottom: 1rem;
